core-architecture/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-engine
  namespace: fintech-infrastructure
  labels:
    app: fintech-platform
    component: ingestion-core
    environment: lab
spec:
  replicas: 3
  selector:
    matchLabels:
      component: ingestion-core
  template:
    metadata:
      labels:
        component: ingestion-core
    spec:
      containers:
      - name: web-server
        image: nginx:alpine
        ports:
        - containerPort: 80
