core-architecture/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-frontend-svc
  namespace: fintech-infrastructure
spec:
  type: NodePort
  selector:
    component: ingestion-core
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32090
    protocol: TCP
