core-architecture/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  namespace: fintech-infrastructure
spec:
  ingressClassName: nginx
  rules:
  - host: fintech.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingestion-frontend-svc
            port:
              number: 80
